# RNAStructProfiling_v2

./: .gitignore  .gitnore  CMakeLists.txt  Makefile  README  Set.c  Set.h  create_output_folders.py  hashtbl.c  helix_class.c  helix_class.h  main.c  output.samples  profile.dot  stem.c  stem.h  update_output.py
TPP/: A.thaliana.1_sfold.out  Agrobacterium_tumefa.1_sfold.out  B.subtilis.1_sfold.out  Bacillus_cytotoxicus.1_sfold.out  Bacillus_licheniform.1_sfold.out  C.diphtheriae.3_sfold.out  C.diphtheriae.3_sfold.txt  G.sulfurreducens.1_sfold.out  L.innocua.1_sfold.out  Lactobacillus_planta.1_sfold.out  Mycobacterium_tuberc.1_sfold.out  N.haematococca.1_sfold.out  O.sativa.2_sfold.out  O.sativa.2_sfold.txt  Pasteurella_multocid.1_sfold.out  Photorhabdus_lumines.2_sfold.out  Prochlorococcus_mari.2_sfold.out  Pseudomonas_syringae.1_sfold.out  Rhodopseudomonas_pal.1_sfold.out  S.carnosus.1_sfold.out  S.coelicolor.2_sfold.out  S.pneumoniae.1_sfold.out  Sinorhizobium_fredii.1_sfold.out  Staphylococcus_sapro.1_sfold.out  Streptococcus_pneumo.2_sfold.out  Sulfitobacter.1_sfold.out  T.acidophilum.1_sfold.out  T.violacea.1_sfold.out  Thermoanaerobacter_t.3_sfold.out  Thermosipho_melanesi.1_sfold.out
docs/: DevelopmentOutline.txt
output/: 5SrRNA.dot  FMN-B.subtilis.2.dot  FMN-Clostridium_botulinu.1.dot  Fluoride.dot  IRES_HCV-Hepatitis_C_virus_su.2.dot  ecoli_5S  ecoli_5S.dot  ecoli_5S.samples  glmS-Listeria_monocytogen.2.dot  seq_from_output.py
src/: Makefile  Options.c  Options.h  Profile.c  Profile.h  Set.c  Set.h  array_list.c  array_list.h  consolidated_graph.c  graph.c  (+10 more)
(+1263 files in other folders)
